--- a/prolific_payment.Rmd
+++ b/prolific_payment.Rmd
@@ -36,8 +36,9 @@ library(tidyverse)
 
 ```{r, include=FALSE, message=FALSE, warning=FALSE}
 
-dat_esm  <- read.csv("prolific_pilot.csv", sep = ";")
-dat_base <- read.csv("qualtrics_pilot.csv")
+dat_esm  <- read.csv("esm_pilot_dat.csv", sep = ";")
+dat_base <- read.csv("qualtrics_pilot_dat.csv")
+dat_prol <- read.csv("prolific_pilot_dat.csv")
 
 ```
 
@@ -51,29 +52,31 @@ dat_esm <- dat_esm %>%
   filter(scheduledBeepId != "-1") %>% # filtering intake rows
   group_by(connectionId) %>% 
   mutate(total_fill = sum(!is.na(anx_som_2_sliderNeutralPos)),
-         study_id = alias,
-         study_id = toupper(study_id)) %>% # one particpant had lowercase id
+         study_id = toupper(alias)) %>%  # one particpant had lowercase id
   ungroup() %>% 
   filter(!is.na(anx_som_2_sliderNeutralPos)) %>% 
-  select("study_id", "connectionId", "total_fill") 
+  select("study_id", "total_fill") 
 
 
-dat_base <- dat_base[-c(1,2), ] # removing first two non-data rows from qualtrics csv
-dat_base <- dat_base %>%
-  select("study_id", "PROLIFIC_PID")
+dat_base <- dat_base[-c(1,2), ] %>%  # removing qualtrics metadata rows
+  select(study_id, PROLIFIC_PID)
+
+dat_prol <- dat_prol %>% 
+  rename(PROLIFIC_PID = Participant.id)
 
 dat <- dat_esm %>% 
-  left_join(dat_base, by = "study_id")
+  left_join(dat_base, by = "study_id") %>% 
+  left_join(dat_prol, by = "PROLIFIC_PID")
   
 # calculating bonuses
 # based on https://docs.google.com/spreadsheets/d/1KwXkGxeep8NdwvREutBWaeAHLPr17QvEiGWASuHVxnA/edit?gid=0#gid=0
 dat <- dat %>% 
   mutate(beep_bonus      = total_fill * 0.13,                    # below 80%, GBP/survey is 0.13
-         threshold_bonus = ifelse(total_fill >= 64, 3.15, 0.00), # 80% of all available surveys (20x4) is 64
+         threshold_bonus = ifelse(total_fill >= 64, 3.15, 0),    # 80% of all available surveys (20x4) is 64
          bonus           = beep_bonus + threshold_bonus          # total bonus is the sum of the two
          ) %>% 
   distinct() %>% 
-  select("PROLIFIC_PID", "bonus")
+  select("Submission.id", "bonus")
 
 ```
 
